--- a/src/style/ToDoList.css
+++ b/src/style/ToDoList.css
@@ -22,6 +22,5 @@
 }
 
 .action-fieldname{
-    width: 150px;
-    text-align: center;
+    width: 200px;
 }
